--- a/index.css
+++ b/index.css
@@ -223,7 +223,13 @@ input[type=range] {
   -webkit-appearance: none;
   appearance: none;
   background: transparent;
+  height: 4px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
+
+/* WebKit (Chrome, Safari, Edge) */
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
@@ -234,13 +240,39 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   margin-top: -6px;
   box-shadow: 0 0 0 1px #4f46e5;
+  position: relative;
+  z-index: 50;
 }
+
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
-  background: var(--border-primary);
+  background: var(--text-tertiary);
   border-radius: 2px;
+  opacity: 0.8;
+  position: relative;
+  z-index: 1;
+}
+
+/* Firefox */
+input[type=range]::-moz-range-thumb {
+  height: 16px;
+  width: 16px;
+  border: none;
+  border-radius: 50%;
+  background: var(--text-secondary);
+  cursor: pointer;
+  box-shadow: 0 0 0 1px #4f46e5;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: var(--text-tertiary);
+  border-radius: 2px;
+  opacity: 0.8;
 }
 
 /* Theme transition for smooth switching */
